# scholar

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
doc/: Makefile  introduction.tex  preamble.tex  scholar.tex
src/scholar/: Makefile  cache.nw  cli.nw  enrich.nw  llm_review.nw  notes.nw  pdf.nw  providers.nw  review.nw  scholar.nw  tui.nw
tests/: Makefile
