[project]
name = "scholar"
version = "0.1.0"
description = "A tool for structured literature searches across bibliographic databases"
authors = [{ name = "Daniel Bosk", email = "dbosk@kth.se" }]
readme = "README.md"
license = "MIT"
requires-python = ">= 3.12"
dependencies = [
    "requests>=2.32.5",
    "typer>=0.21.0",
    "rich>=14.2.0",
    "semanticscholar>=0.11.0",
    "pyalex>=0.19",
    "cachetools>=6.2.4",
    "platformdirs>=4.5.1",
    "textual>=6.11.0",
]

[project.scripts]
scholar = "scholar.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "integration: marks tests as integration tests (make real API calls)",
]

[tool.black]
line-length = 78

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "black (>=25.12.0,<26.0.0)",
    "mypy (>=1.19.1,<2.0.0)"
]
